<resources>
    <string name="safety_net_api_key" translatable="false">AIzaSyD3rCY-oagTC64F4GcbqpncDwKvZGK9ggM</string>
    <string name="app_name">Smart Home</string>
    <string name="selected_language">English</string>
    <string name="language">Hi</string>

    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit. Vivamus sodales faucibus\ndapibus. Etiam mattis leo quis laoreet dictum.</string>
    <string name="demo_title">Lorem Ipsum</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>

    <string name="onboarding1">Hi,User!</string>
    <string name="onboarding1_1">Let me guide you further for understanding application</string>
    <string name="onboarding1_2">Next</string>
    <string name="onboarding2">Let\'s Start</string>
    <string name="onboarding2_1">By clicking on every switch you can ON/OF the switch</string>
    <string name="onboarding2_2">Next</string>
    <string name="onboarding3">It also consist</string>
    <string name="onboarding3_1">The best feature it has is it recognize the voice.</string>
    <string name="onboarding3_2">Next</string>
    <string name="onboarding4">lets add appliances</string>
    <string name="onboarding4_1">It help you control your appliance without any physical strength</string>
    <string name="Login_1">Login</string>
    <string name="Login_2">E-mail</string>
    <string name="Login_3">Password</string>
    <string name="Login_4">Forget Password?</string>
    <string name="Login_5">Login</string>
    <string name="Login_6">Register</string>
    <string name="Login_7">or Login with</string>
    <string name="Login_8">Google</string>
    <string name="registration_1">Register Account</string>
    <string name="registration_2">Name</string>
    <string name="registration_3">Username</string>
    <string name="registration_4">Email</string>
    <string name="registration_5">PhoneNo</string>
    <string name="registration_6">Password</string>
    <string name="registration_7">Signup</string>
    <string name="Settings_1">Settings</string>
    <string name="settings_2">Edit Profile</string>
    <string name="settings_3">Change Password</string>
    <string name="settings_4">Language: English</string>
    <string name="settings_5">FAQ</string>
    <string name="settings_6">Contact us</string>
    <string name="settings_7">Logout</string>
    <string name="settings_8">Dark Mode</string>
    <string name="profile_1">Profile</string>
    <string name="profile_2">Name</string>
    <string name="profile_3">E-mail</string>
    <string name="profile_4">Phone Number</string>
    <string name="profile_5">Password</string>
    <string name="string_language_change_dialog_title">Change Language</string>
    <string name="string_dialog_cancel">Cancel</string>
    <string name="string_dialog_confirm">Apply</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="settingsFragment_1">Are you sure?</string>
    <string name="settingsFragment_2">Logout</string>
    <string name="settingsFragment_3">Cancel</string>
    <string name="settingsFragment_4">Logged out</string>
    <string name="settingsFragment_5">Edit Name</string>
    <string name="settingsFragment_6">Edit Phone</string>
    <string name="settingsFragment_7">Choose Action</string>
    <string name="homeFragment_1">Home</string>
    <string name="loginActivity_1">Reset Password ?</string>
    <string name="loginActivity_2">Enter Your Email To Received Reset Link.</string>
    <string name="loginActivity_3">Reset Link Sent To Your Email.</string>
    <string name="loginActivity_4">Error ! Reset Link is Not Sent</string>
    <string name="loginActivity_5">Yes</string>
    <string name="loginActivity_6">No</string>
    <string name="homeFragment_13">ADD</string>
    <string name="homeFragment_11">Hall</string>
    <string name="homeFragment_12">Bedroom</string>
    <string name="homeFragment_10">Kitchen</string>
    <string name="roomDetails_1">Devices</string>
    <string name="roomDetails_2">Only members have access</string>
    <string name="roomDetails_3">TEMP</string>
    <string name="roomDetails_4">Light</string>
    <string name="roomDetails_5">Fan</string>
    <string name="roomDetails_6">Air Conditioner</string>
    <string name="roomDetails_7">Table Light</string>
    <string name="roomDetails_8">TV</string>
    <string name="noDevices">5 Devices</string>
    <string name="phoneLogin_1">Login with PhoneNo.</string>
    <string name="profile_6">Username</string>
    <string name="enable_light_mode">Disable Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="add_room">Add Room</string>
    <string name="enter_roomname">Enter RoomName</string>
    <string name="phone_no">Phone No.</string>
    <string name="verify_nyour_nnumber">Verify\nYour\nNumber</string>
    <string name="please_enter_your_country_code_n_and_phone_number_for_verification">Please enter your Country Code \n and Phone number for verification</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="we_have_sent_you_an_otp_n_for_phone_number_verification">We have sent you an OTP \n for phone number verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="authentication">Authentication</string>
    <string name="security">Security</string>
    <string name="profile">Profile</string>
    <string name="regional">Regional</string>
    <string name="other">Other</string>
    <string name="create_profile">Create Profile</string>
    <string name="create">Create</string>
    <string name="skip">Skip</string>
    <string name="cancel_1">CANCEL</string>
    <string name="add_room_1">ADD ROOM</string>
    <string name="your_phonenumber">Your PhoneNumber</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="your_username">Your Username</string>
    <string name="toast_phone">Edit Profile to add data..</string>
</resources>